--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -10,3 +10,19 @@
     width: 100%; /* Set the image width to 100% */
     height: 100vh; /* Set the image height to 100% of the viewport height */
 }
+
+/* Overlay styles */
+.overlay {
+    position: absolute; /* Position the overlay absolutely */
+    padding: 10%; /* Add padding to the overlay */
+    justify-content: flex-end; /* Align content at the bottom */
+    align-items: flex-start; /* Align items to the top */
+    background-image: linear-gradient(rgb(0, 0, 0, 0), rgb(0, 0, 0, 1)); /* Apply a gradient background */
+    bottom: 0px; /* Position the overlay at the bottom */
+    height: 70%; /* Set the height of the overlay */
+    opacity: 1; /* Set initial opacity */
+    transition: opacity 0.3s; /* Apply a transition effect to opacity */
+    display: flex; /* Display overlay as a flex container */
+    flex-direction: column; /* Arrange items vertically */
+    width: 100%; /* Set the overlay width to 100% */
+}
