--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -54,3 +54,15 @@
     text-align: left; /* Align text to the left */
     width: 50%; /* Set width to 50% of the container */
 }
+
+/* Media query for screens with a max width of 800px */
+@media (max-width: 800px) {
+    /* Adjust movie description styles for smaller screens */
+    .movie__description {
+        font-size: 18px; /* Set font size */
+        margin-bottom: 0.25rem; /* Add margin at the bottom */
+        display: flex; /* Display as a flex container */
+        text-align: left; /* Align text to the left */
+        width: 100%; /* Set width to 100% of the container */
+    }
+}
